--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jsonparsing">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,7 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.JsonParsing">
+
+        <activity android:name=".Clickcardview"></activity>
         <activity android:name="UI.WeatherReport">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="API.TypiCode">
-        </activity>
+        <activity android:name="API.TypiCode"></activity>
         <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
